Correcting overlapping issue

--- a/src/Components/NewCollections/NewCollections.css
+++ b/src/Components/NewCollections/NewCollections.css
@@ -27,10 +27,6 @@
 }
 
 @media (max-width:1280px) {
-    .new-collections{
-        height: 70vh;
-    }
-
     .new-collections h1{
         font-size: 40px;
     }
@@ -47,10 +43,6 @@
 }
 
 @media (max-width:1024px) {
-    .new-collections{
-        height: 60vh;
-    }
-
     .new-collections h1{
         font-size: 30px;
     }
@@ -69,7 +61,6 @@
 
 @media (max-width:800px) {
     .new-collections{
-        height: 50vh;
         gap: 6px;
     }
 
@@ -88,10 +79,6 @@
 
 
 @media (max-width:500px) {
-    .new-collections{
-        height: 90vh;
-    }
-
     .collections{
         display: grid;
         grid-template-columns: 1fr 1fr;
